# altego

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  README.md~  gnome.txt  help.txt  linux.txt  rust.txt  tumbleweed.txt  wget-list  wget.list  wget_list
distros/: Arch.txt  Connochaet.txt  Deepin.txt  Doodoo.txt  Enlightenment.txt  Fedora.txt  Gecko.txt  Gnome.txt  Hannah.txt  NuTyX.txt  RedStar.txt  Solus.txt  Tumbleweed.txt  Ubuntu.txt  Windows.txt  _template.txt
info/: _template.json
info/DEs&WMs/: Enlightenment.json  Gnome.json  LXQt.json  Manokwari.json  Manokwari.txt  Pantheon.json  Ratpoison.json  Ratpoison.txt  Xfce.json
info/Distros/: Arch.json  Arch.txt  Artix.json  Chakra.json  Clonezilla.json  Connochaet.json  Deepin.json  Elementary.json  Elementary.txt  Fedora.json  Gecko.json  Gentoo.json  Gentoo.txt  Hannah.json  LFS.json  LFS.txt  Makulu.json  Mint.json  NixOS.json  NuTyX.json  Pop.json  QubesOS.json  Quirky.json  RBOS.json  RBOS.txt  RISC.json  RISC.txt  Rancher.json  RedStar.json  Rescatux.json  Rescatux.txt  Revenge.json  Sabayon.json  Siduction.json  Solus.json  Sparky.json  Sparky.txt  Subgraph.json  TalkingArch.json  Tumbleweed.json  (+7 more)
info/Hardware/: Optimus.json  optimus.json
info/Others/: OpenBSD.json  TempleOS.json  Windows.json
pastas/: stallman.txt
src/: admin.rs  com.rs  coop.rs  db.rs  ddginc.rs  main.rs  main.rs~
src/commands/: about.rs  admin.rs  misc.rs  mod.rs  pierogi.rs  tux.rs  useful.rs  voice.rs  voice.rs~
