[package]
name = "lcpae"
version = "0.0.2"
authors = ["my name <my@email.address>"]

[dependencies]
ansi_term = "0.9"
regex = "0.2"
ddg = "0.4.2"
hyper = "*"
select = "*"
hyper-native-tls = "0.2.4"
serde_json = "*"
url = "*"

[dependencies.serenity]
git = "https://github.com/zeyla/serenity.git"
features = ["cache", "framework"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]


