[package]
name = "lcpae"
version = "0.0.2"
authors = ["LCP <letcp@protonmail.com>"]

[dependencies]
ansi_term = "0.9.0"
regex = "0.2.2"
ddg = "0.4.2"
hyper = "0.10.13"
select = "0.4.2"
hyper-native-tls = "0.2.4"
hyper-tls = "0.1.2"
serde_json = "1.0.2"
url = "1.5.1"
rand = "0.3.16"
time = "0.1.38"
tokio-core = "0.1.9"
glob = "0.2.11"
rusqlite = "0.12.0"

[dependencies.serenity]
version = "0.4.0"
features = ["cache", "framework", "standard_framework"]

[dependencies.chrono]
version = "0.4.0"
features = ["serde"]
